[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ukraine-support-gravity"
version = "1.0.0"
description = "Analysis and visualization of the gravitational center of EU assistance to Ukraine"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Philipp"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26.4,<2.0.0",
    "pandas>=2.2.0,<3.0.0", 
    "matplotlib>=3.8.0,<4.0.0",
    "scikit-learn>=1.5.2",
    "geopy>=2.4.1",
    "basemap>=1.3.6",
    "basemap-data>=1.3.2",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.urls]
"Homepage" = "https://github.com/your-username/ukraine-support-gravity"
"Bug Reports" = "https://github.com/your-username/ukraine-support-gravity/issues"

[tool.setuptools.packages.find]
include = ["ukraine_support_gravity*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true